update project 2de zit

--- a/scripts/Config.ini
+++ b/scripts/Config.ini
@@ -4,22 +4,20 @@ Action=InstallPrimarySite
 [Options]
 ProductID=Eval
 SiteCode=BEL
-SiteName=EP1-Maximiliaan.HoGent
+SiteName=EP3-Maximiliaan.HoGent
 SMSInstallDir="C:\SCCM_Install"
-SDKServer=SCCM.EP1-Maximiliaan.HoGent
+SDKServer=EP3-SCCM.EP3-Maximiliaan.hogent
 RoleCommunicationProtocol=HTTPorHTTPS
 ClientsUsePKICertificate=0
-PrerequisiteComp=1
-PrerequisitePath=E:\SCCM\SCCM_Updates
 MobileDeviceLanguage=0
-ManagementPoint=SCCM.EP1-Maximiliaan.HoGent
+ManagementPoint=EP3-SCCM.EP3-Maximiliaan.hogent
 ManagementPointProtocol=HTTP
-DistributionPoint=SCCM.EP1-Maximiliaan.HoGent
+DistributionPoint=EP3-SCCM.EP3-Maximiliaan.hogent
 DistributionPointProtocol=HTTP
 DistributionPointInstallIIS=0
 AdminConsole=1
 
 [SQLConfigOptions]
-SQLServerName=EP1-SQL.EP1-Maximiliaan.HoGent
-DatabaseName=CM_BEL
+SQLServerName=EP3-SCCM.EP3-Maximiliaan.hogent
+DatabaseName=EP3_SCCM
 SQLSSBPort=4022 
